// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render correctly with multiple visible expense 1`] = `
<div>
  <h4>
    Viewing 3 expenses totalling $12,413.00
  </h4>
</div>
`;

exports[`Should render correctly with no visible expenses 1`] = `
<div>
  <h4>
    Viewing 0 expenses totalling $0.00
  </h4>
</div>
`;

exports[`Should render correctly with single visible expense 1`] = `
<div>
  <h4>
    Viewing 1 expense totalling $123.00
  </h4>
</div>
`;
